fix z-index issue with glyph panel

--- a/app/styles/layout/glyph-panel.scss
+++ b/app/styles/layout/glyph-panel.scss
@@ -4,7 +4,7 @@
 	position:absolute;
 	right:0;
 	bottom:0;
-	z-index:3;
+	z-index:10;
 	width:201px;
 	height:100%;
 	-webkit-transform: translateX(calc(100%));
